第10章 泛型算法

--- a/第10 章 泛型算法.md
+++ b/第10 章 泛型算法.md
@@ -2157,6 +2157,183 @@ cout << string(line.crbegin(), rcomma) << endl;
 cout << string(rcomma.base(), line.cend()) << endl;
 ```
 
+![图10.2：反向迭代器和普通迭代器间的关系](https://raw.githubusercontent.com/KimmiGYH/CPP_Primer_Notes_Public/master/%E7%AC%AC10%20%E7%AB%A0%20%E6%B3%9B%E5%9E%8B%E7%AE%97%E6%B3%95/10.4.3%20%E5%8F%8D%E5%90%91%E8%BF%AD%E4%BB%A3%E5%99%A8/%E5%9B%BE10.2%EF%BC%9A%E5%8F%8D%E5%90%91%E8%BF%AD%E4%BB%A3%E5%99%A8%E5%92%8C%E6%99%AE%E9%80%9A%E8%BF%AD%E4%BB%A3%E5%99%A8%E9%97%B4%E7%9A%84%E5%85%B3%E7%B3%BB.png)
+
+图10.2中的对象显示了普通迭代器与反向迭代器之间的关系。例如，`rcomma` 和 `rcomma.base()` 指向不同的元素，`line.crbegin()` 和 `line.cend()` 也是如此。这些不同保证了元素范围无论是正向处理还是反向处理都是相同的。
+
+从技术上讲，普通迭代器与反向迭代器的关系反映了左闭合区间的特性。关键点在于 `[line.crbegin(), rc omma)` 和 `[rcomma.base(), line.cend())`  指向 `line`中，相同的元素范围。为了实现这一点，`rcomma` 和 `rcomma.base()` 必须生成相邻位置而不是相同位置，`crbegin()` 和 `cend()` 也是如此。
+
+**Note**：反向迭代器的目的是表示元素范围，而这些范围是不对称的，这导致一个重要的结果：当我们从一个普通迭代器初始化一个反向迭代器，或是给一个反向迭代器赋值时，结果迭代器与原迭代器指向的并不是相同的元素。
+
+**练习10.34：使用 `reverse_iterator` 逆序打印一个 `vector`。**
+
+解答：练习反向迭代器的简单使用。
+
+```c++
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    if (argc != 2) {
+        cout << "Usage: exercise.exe in_file" << endl;
+        return -1;
+    }
+    
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+    
+    vector<int> vi;
+    int v;
+    while (in >> v) //从文件中读取整数
+        vi.push_back(v);
+    
+    for (auto r_iter = vi.crbegin(); r_iter != vi.crend(); ++r_iter)
+        cout << *r_iter << " ";
+    cout << endl;
+    
+    return 0;
+}
+```
+
+**练习10.35：使用普通迭代器逆序打印一个 `vector`。**
+
+解答：体会反向迭代器和普通迭代器的差异。
+
+若使用普通迭代器反向遍历容器，首先通过 `cend` 获得容器的尾后迭代器，循环中递减该迭代器，直到它与 `begin` 相等为止。但需要注意的是，遍历所用迭代器的初值为尾后位置，终值为 `begin` 之后的位置。也就是说，在每个循环步中，它指向的都是我们要访问的元素之后的位置。因此，我们在循环中首先将其递减，然后通过它访问容器元素，而在循环语句的第三个表达式中就不再递减迭代器了。
+显然，对于反向遍历容器，使用反向迭代器比普通迭代器更加清晰易懂。
+
+```c++
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    if (argc != 2) {
+        cout << "Usage: exercise.exe in_file" << endl;
+        return -1;
+    }
+    
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+    
+    vector<int> vi;
+    int v;
+    while (in >> v) //从文件中读取整数
+        vi.push_back(v);
+    
+    for (auto r_iter = vi.cend(); r_iter != vi.begin();)
+        cout << *(--r_iter) << " "; //终值为 begin 之后的位置
+    cout << endl;
+    
+    return 0;
+}
+```
+
+**练习10.36：使用 `find` 在一个 `int` 的 `list` 中查找最后一个值为 `0` 的元素。**
+
+解答：练习反向迭代器和算法的结合。
+
+借助反向迭代期可以扩展算法的能力。例如，使用普通迭代器，`find` 能查找给定值，在容器中第一次出现的位置。如果要查找最后一次出现的位置，还使用普通迭代器的话，代码会很复杂。但借助反向迭代器，`find` 可以逆序遍历容器中的元素，从而 “第一次出现位置” 实际上也就是正常顺序的最后一次出现位置了。
+
+注意：
+1. 由于 `list` 是链表数据结构，元素不连续存储，其迭代器不支持算术运算。因此，程序中用一个循环来计数位置编号。
+2. 由于程序技术的是正向位置编号，因此需要将 `find` 找到的反向迭代器 `last_z` 转换为普通迭代器（使用`base` 成员函数）。但要注意，反向迭代器与普通迭代器的转换是左闭合区间的转换，而非精确位置的转换。`last_z.base()` 指向的并非最后一个 `0`，而是它靠近容器尾方向的邻居。因此首先要将 `last_z` 向容器首方向推进一个位置（`++`），然后再调用 `base`，得到的就是指向最后一个 `0` 的普通迭代器了。
+
+```c++
+#include <iostream>
+#include <list>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    list<int> li = { 0, 1, 2, 0, 3, 4, 5, 0, 6};
+    //利用反向迭代器查找最后一个0
+    auto last_z = find(li.rbegin(), li.rcend(), 0);
+    //将迭代器向链表头方向推进一个位置
+    //转换为普通迭代器时，将回到最后一个 0 的位置
+    last_z ++;
+    int p = 1;
+    //用 base 将 last_z 转换为普通迭代器
+    //从连表头开始遍历，计数最后一个 0 的编号
+    for (auto iter = li.begin(); iter != last_z.base(); iter++, p++);
+    if (p >= li.size()) // 未找到 0
+        cout << "容器中没有 0" << endl;
+    else cout << "最后一个 0 在第" << p << "个位置" << endl;
+    
+    return 0;
+}
+```
+
+**练习10.37：给定一个包含 10 个元素的 `vector`，将位置3到7之间的元素按逆序拷贝到一个 `list` 中。**
+
+解答：深入理解反向迭代器和普通迭代器间的差异及相互转换。
+
+反向迭代器和普通迭代器的转换是左闭合区间的转换。
+对 10 个元素的 `vector vi`，包含位置3~7之间的元素的迭代器区间如下所示：
+
+```cpp
+0  1  2  3  4  5  6  7  8  9 
+      il             i2
+```
+
+第一个迭代器是 `vi.begin()+2`，第二个迭代器指向位置8，即 `vi.begin()+7`。
+
+当这两个迭代器转换为反向迭代器时，位置如下：
+
+```cpp
+0  1  2  3  4  5  6  7  8  9 
+   re             rb
+```
+
+虽然与正向迭代器的位置不同，但左闭合区间 `[rb, re)` 仍然对应位置3~7之间的元素。显然，普通—反向迭代器间的这种错位，恰恰是因为标准库的范围概念是左闭合区间造成的。
+另外注意 `back_inserter` 和流迭代器的使用。
+
+```c++
+#include <iostream>
+#include <vector>
+#include <list>
+#include <iterator>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ostream_iterator<int> out_iter(cout, " ");
+    vector<int> vi = { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+    //用流迭代器和 copy 输出 int序列
+    copy(vi.begin(), vi.end(), out_iter);
+    cout << endl;
+    
+    list<int> li;
+    // 将vi[2]，也就是第3个元素的位置转换为反向迭代器
+    vector<int>::reverse_iterator re(vi.begin()+2);
+    // 将vi[7]，也就是第8个元素的位置转换为反向迭代器
+    vector<int>::reverse_iterator rb(vi.begin()+7);
+    // 用反向迭代器将元素逆序拷贝到 list
+    copy(rb, re, back_inserter(li));
+    copy(li.begin(), li.end(), out_iter);
+    
+    return 0;
+}
+```
 
 ## 10.5 泛型算法结构
 
