--- a/第10 章 泛型算法.md
+++ b/第10 章 泛型算法.md
@@ -48,9 +48,18 @@
       - [反向迭代器和其他迭代器间的关系](#反向迭代器和其他迭代器间的关系)
   - [10.5 泛型算法结构](#105-泛型算法结构)
     - [10.5.1 5类迭代器](#1051-5类迭代器)
+      - [迭代器类别](#迭代器类别)
     - [10.5.2 算法形参模式](#1052-算法形参模式)
+    - [算法形参模式](#算法形参模式)
+      - [接受单个目标迭代器的算法](#接受单个目标迭代器的算法)
+      - [接受第二个输入序列的算法](#接受第二个输入序列的算法)
     - [10.5.3 算法命名规范](#1053-算法命名规范)
+      - [一些算法使用重载形式传递一个谓词](#一些算法使用重载形式传递一个谓词)
+      - [`_if` 版本的算法](#_if-版本的算法)
+      - [区分拷贝元素的版本和不拷贝的版本](#区分拷贝元素的版本和不拷贝的版本)
   - [10.6 特定容器算法](#106-特定容器算法)
+      - [`splice` 成员](#splice-成员)
+      - [链表特有的操作会改变容器](#链表特有的操作会改变容器)
 
 <!-- /TOC -->
 
@@ -2337,10 +2346,252 @@ int main(int argc, char *argv[])
 
 ## 10.5 泛型算法结构
 
+任何算法的最基本的特性就是它要求其迭代器提供的一些操作，某些算法如 `find` 只要求通过迭代器访问元素，递增迭代器以及比较两个迭代期是否相等这些能力。其他一些算法如 `sort` 还要求读、写和随机访问元素的能力。算法所要求的迭代器操作可以分为 5 个 **迭代器类别（iterator category）**。每个算法都会对它的每个迭代器参数指明须提供哪类迭代器。
+
+| 表10.5：       | 迭代器类别                           |
+| -------------- | ------------------------------------ |
+| 输入迭代器     | 只读，不写；单遍扫描，只能递增       |
+| 输出迭代器     | 只写，不读；单遍扫描，只能递增       |
+| 前向迭代器     | 可读写；多遍扫描，只能递增           |
+| 双向迭代器     | 可读写；多遍扫描，可递增递减         |
+| 随机访问迭代器 | 可读写，多遍扫描，支持全部迭代器运算 |
+
 ### 10.5.1 5类迭代器
+
+#### 迭代器类别
+
+**输入迭代器**（input iterator）：可以读取序列中的元素，一个输入迭代器必须支持：
+- 用于比较两个迭代器的相等和不相等运算符（`==`、`!=`）
+- 用于推进迭代器的前置和后置递增运算（`++`）
+- 用于读取元素的结引用运算符（`*`）；解引用只会出现在赋值运算符的右侧
+- 箭头运算符（`->`）等价于（`(*it).member`），即，解引用迭代器，并提取对象的成员
+
+输入迭代器只用于顺序访问。对于一个输入迭代器，`*it++` 保证是有效的，但递增它可能导致所有其他指向流的迭代器失效。其结果就是，不能保证输入迭代器的状态可以保存下来并用来访问元素。因此，输入迭代器只能用于单遍扫描算法。算法 `find` 和 `accumulate` 要求输入迭代器；而 `istream_iterator` 是一种输输入迭代器。
+
+**输出迭代器**（output iterator）：可以看作输入迭代器功能上的补集——只写二不读元素。输出迭代器必须支持：
+- 用于推进迭代器的前置和后置递增运算（`++`）
+- 解引用运算符（`*`），只出现在赋值运算符的左侧（向一个已经解引用的输出迭代器赋值，就是将值写入它所指向的元素）
+
+我们只能向一个输出迭代器赋值一次。类似输入迭代器，输出迭代器只能用于单遍扫描算法。用作目的位置的迭代器通常都是输出迭代器。例如，`copy` 函数的第三个参数就是输出迭代器。 `ostream_iterator` 类型也是输出迭代器。
+
+**前向迭代器**（forward iterator）：可以读写元素。这类迭代器只能在序列中沿一个方向移动。前向迭代器支持所有输入和输出迭代器的操作，而且可以多次读写同一个元素。因此，我们可以保存前向迭代期的状态，使用前向迭代器的算法可以对序列进行多遍扫描。算法 `replace` 要求前向迭代期，`forward_list` 上的迭代期是前向迭代期。
+
+**双向迭代器**（bidirectional iterator）：可以正向/反向读写序列中的元素。除了支持所有前向迭代器的操作之外，双向迭代器还支持前置和后置递减运算符（`--`）。算法 `reverse` 要求双向迭代器，除了 `forward_list` 之外，其他标准库都提供符合双向迭代器要求的迭代器。
+
+**随机访问迭代器**（random-access iterator）：提供在常量时间内访问序列中任意元素的能力。此类迭代器支持双向迭代器的所有功能，此外还支持表3.7（第99页）中的操作：
+
+- 用于比较两个迭代器相对位置的关系运算符（`<`、`<=`、`>` 和 `>=`）
+- 迭代器和一个整数值的加减运算（`+`、`+=`、`-` 和 `-=`），计算结果是迭代器在序列中前进（或后退）给定整数个元素后的位置
+- 用于两个迭代器上的减法运算符（`-`），得到两个迭代器的距离
+- 下标运算符（`iter[n]`），与 `*(iter[n])` 等价
+
+算法 `sort` 要求随机访问迭代器。`array`、`deque`、`string` 和 `vector` 的迭代器都是随机访问迭代器，用于访问内置数组元素的指针也是。
+
+**练习10.38：列出5个迭代期类别，以及每类迭代器所支持的操作。**
+
+**输入迭代器**：只读，不写；单遍扫描，只能递增；还支持相等性判定运算符（`==`、`!=`）、解引用运算符（`*`）（只出现在赋值运算符右侧）和箭头运算符（`->`）。
+
+**输出迭代器**：只写，不读；单遍扫描，只能递增，支持解引用运算符（`*`）（只出现在赋值运算符左侧）。
+
+**前向迭代器**：可读写；多遍扫描，只能递增，支持所有输入、输出迭代器的操作。
+
+**双向迭代器**：可读写；多遍扫描，可递增递减，支持所有前向迭代器操作。
+
+**随机访问迭代器**：可读写，多遍扫描，支持全部迭代器运算，除了上述迭代器类别支持的操作外，还有比较两个迭代器相对位置的关系运算符（`<`、`<=`、`>` 和 `>=`）、迭代器和一个整数值的加减运算（`+`、`+=`、`-` 和 `-=`）令迭代器在序列中前进或后退给定整数个元素、两个迭代器上的减法运算符（`-`）得到其距离以及下标运算符。
+
+**练习10.39：`list` 上的迭代器属于哪类？`vector` 呢？**
+
+`list` 上的迭代器是双向迭代器，`vector` 上的迭代器是随机访问迭代器。
+
+**练习10.40：你认为 `copy` 要求哪类迭代器？`reverse` 和 `unique` 呢？**
+
+`copy` 要求前两个参数至少是输入迭代器，表示一个输入范围。它读取这个范围中的元素，写入到第三个参数表示的输出序列中，因此第三个参数至少是输出迭代器。
+
+`reverse` 要反向处理序列，因此它要求两个参数至少是双向迭代器。
+
+`unique` 顺序扫描元素，覆盖重复元素，因此要求两个参数至少是前向迭代器。
+
+“至少”意味着能力更强的迭代器是可接受的。
 
 ### 10.5.2 算法形参模式
 
+### 算法形参模式
+
+在任何其它算法分类之上，还有一组参数规范。理解这些参数规范对学习新算法很有帮助——通过理解参数的含义，你可以将注意力集中在算法所做的操作上。大多数算法具有如下4种形式之一。
+
+```cpp
+alg(beg, end, other args);
+alg(beg, end, dest, other args);
+alg(beg, end, beg2, other args);
+alg(beg, end, beg2, end2, other args);
+```
+
+`beg` 和 `end` 表示算法所操作的输入范围，`dest` 表示指定目的位置，`beg2`, `end2` 表示第二个范围。
+
+#### 接受单个目标迭代器的算法
+
+`dest` 参数是一个表示算法可以写入的目的位置的迭代器。
+
+**WARNING**：向输出迭代器写入数据的算法都假定目标空间足够容纳写入的数据。
+
+如果 `dest` 是一个直接指向容器的迭代器，那么算法将输出数据写到容器中已存在的元素内。更常见的情况是，`dest` 被绑定到一个插入迭代器或是一个 `ostream_iterator`。插入迭代器会将新元素添加到容器中，因而保证空间是足够的。`ostream_iterator` 会将数据写入到一个输出流，同样不管要写入多少个元素都没有问题。
+
+#### 接受第二个输入序列的算法
+
+**WARNING**：接受单独 `beg2` 的算法，假定从 `beg2` 开始的序列与 `beg` 和 `end` 所表示的范围至少一样大。
+
 ### 10.5.3 算法命名规范
 
+#### 一些算法使用重载形式传递一个谓词
+
+接受谓词参数来代替 `<` 或 `==` 运算符的算法，以及那些不接受额外参数的算法，通常都是重载的函数。函数的一个版本用元素类型的运算符来比较元素；另一个版本接受一个额外谓词参数，来代替 `<` 或 `==`。
+
+```cpp
+unique(beg, end); // 使用 == 运算符比较元素
+unique(beg, end, comp); // 使用 comp 比较元素
+```
+
+两个调用都重新整理给定序列，将相邻的重复元素删除。第一个调用使用元素类型的 `==` 运算符来检查重复元素；第二个则调用 `comp` 来确定两个元素是否相等。
+由于两个版本的函数在参数个数上不相等，因此具体应该调用哪个版本不会产生歧义。
+
+#### `_if` 版本的算法
+
+接受一个元素值的算法，通常有另一个不同名的（不是重载的）版本，该版本接受一个谓词代替元素值。接受谓词参数的算法都有附加的 `_if` 前缀：
+
+```cpp
+find(beg, end, val);	// 查找输入范围中 val 第一次出现的位置
+find_if(beg, end, pred);// 查找第一个令 pred 为真的元素
+```
+
+这两个算法都在输入范围中查找特定元素第一次出现的位置。算法 `find` 查找第一个指定值；算法 `find_if` 查找使得 `pred` 返回非零值的元素。
+
+这两个算法提供了命名上差异的版本，而非重载版本，因为两个版本的算法都接受相同数目的参数。因此可能产生重载歧义，虽然很罕见，但为了避免任何可能的歧义，标准库选择提供不同名字的版本而不是重载。
+
+#### 区分拷贝元素的版本和不拷贝的版本
+
+默认情况下，重排元素的算法将重排后的元素写回给定的输入序列中。这些算法还提供另一个版本，将元素写到一个指定的输出目的位置。如果我们所见，写到额外目的空间的算法都在名字后面附加一个 `_copy`：
+
+```cpp
+reverse(beg, end); // 反转输入范围中元素的顺序
+reverse_copy(beg, end, dest); // 将元素按逆序拷贝到dest
+```
+
+一些算法同时提供 `_copy` 和 `_if` 版本。这些版本接受一个目的位置迭代器和一个谓词：
+
+```cpp
+// 从 v1 中删除奇数元素
+remove_if(v1.begin(), v1.end(), 
+            [](int i) { return i % 2; });
+// 将偶数元素从 v1 拷贝到 V2；V1 不变
+remove_copy_if(v1.begin(), v1.end(), back_inserter(v2),
+              [] (int i) { return i % 2; });
+```
+
+两个算法都调用了 `lambda` （参见10.3.2节，第346页）来确定元素是否为奇数。在第一个调用中，我们从输入序列中将奇数元素删除。在第二个调用中，我们将非奇数（亦即偶数）元素从输入范围拷贝到 `v2` 中。
+
+**练习10.41：仅根据算法和参数的名字，描述下面每个标准库算法执行什么操作：**
+
+```cpp
+replace(beg, end, old_val, new_val);
+replace_if(beg, end, pred, new_val);
+replace_copy(beg, end, dest, old_val, new_val);
+replace_copy_if(beg, end, dest, pred, new_val);
+```
+
+解答：理解标准库算法的命名规范。
+
+1. 将范围 `[beg, end)` 间值等于 `old_val` 的元素替换为 `new_val`。
+2. 将范围 `[beg, end)` 间满足谓词 `pred`  的元素替换为 `new_val`。
+3. 将范围 `[beg, end)` 间的元素拷贝到目的序列 `dest` 中，将其中值等于 `old_val` 的元素替换为 `new_val`。
+4. 将范围 `[beg, end)` 间的元素拷贝到目的序列 `dest` 中，将其中满足谓词 `pred`  的元素替换为 `new_val`。
+
 ## 10.6 特定容器算法
+
+与其他特定容器不同，链表类型 `list` 和 `forward_list` 定义了几个成员函数形式的算法，如表10.6所示。特别是，它们定义了独有的 `sort`、`merge`、`remove`、`reverse` 和 `unique`。通用版本的 `sort` 要求随机访问迭代器，因此不能用于 `list` 和 `forward_list`，因为这两个类型分别提供双向迭代器和前向迭代器。
+
+链表类型定义的其他算法的通用版本可以用于链表，但代价太高。这些算法需要交换输入序列中的元素。一个链表可以通过改变元素间的链接而不是真的交换它们的值来快速”交换“元素。因此，这些链表版本的算法的性能比对应的通用版本好得多。
+
+**Best Practices**：对于 `list` 和`forward_list` 应该优先使用成员函数版本的算法，而不是通用算法。
+
+| 表10.6：                | `list` 和 `forward_list` 成员函数版本的算法                  |
+| ----------------------- | ------------------------------------------------------------ |
+| 这些操作都返回 `void`   |                                                              |
+| `lst.merge(lst)`        | 将来自 `lst2` 的元素合并入 `lst`。`lst` 和 `lst2` 都必须是有序的。 |
+| `lst.merge(lst2, comp)` | 元素将从 `lst2` 中删除。在合并之后，`lst2` 变为空。第一个版本使用 `<` 运算符；第二个版本使用给定的比较操作 |
+| `lst.remove(val)`       | 调用 `erase` 删除掉与给定值相等（`==`）或令一元谓词为真的每个元素 |
+| `lst.remove_if(pred)`   |                                                              |
+| `lst.reverse()`         | 反转 `lst` 中元素的顺序                                      |
+| `lst.sort()`            | 使用 `<` 或给定比较操作排序元素                              |
+| `lst.sort(comp)`        |                                                              |
+| `lst.unique()`          | 调用 `erase` 删除同一个值的连续拷贝。第一个版本使用 `==`；第二个版本使用给定的二元谓词 |
+| `lst.unique(pred)`      |                                                              |
+
+#### `splice` 成员
+
+链表类型还定义了 `splice` 算法，其描述见表10.7。此算法是链表数据结构所特有的，因此不需要通用版本。
+
+| 表10.7：          | `list` 和 `forward_list` 的 `splice` 成员函数的参数          |
+| ----------------- | ------------------------------------------------------------ |
+|                   | `lst.splice(args)` 或 `flst.splice_after(args)`              |
+| `(p, lst2)`       | `p` 是一个指向 `lst` 中元素的迭代器，或一个指向 `flst` 首前位置的迭代器。函数将 `lst2` 的所有元素移动到 `lst` 中 `p` 之前的位置或是 `flst` 中 `p` 之后的位置。将元素从 `lst2` 中删除。`lst2` 的类型必须与 `lst` 或 `flst` 相同，且不能是同一个链表 |
+| `(p, lst2, p2)`   | `p2` 是一个指向 `lst2` 中位置的有效的迭代器。将 `p2` 指向的元素移动到 `lst` 中，或将 `p2` 之后的元素移动到 `flst` 中。`lst2` 可以是与 `lst` 或 `flst` 相同的链表 |
+| `(p, lst2, b, e)` | `b` 和 `e` 必须表示 `lst2` 中的合法范围。将给定范围中的元素从 `lst2` 移动到 `lst` 或 `flst`。`lst2`与 `lst`（或`flst`）可以是相同的链表，但 `p` 不能指向给定范围中元素 |
+
+#### 链表特有的操作会改变容器
+
+多数链表特有的算法都与其通用版本很相似，但不完全相同。链表特有版本与通用版本间的一个至关重要的区别是链表版本会改变底层的容器。例如，`remove` 的链表版本会删除指定的元素。`unique` 的链表版本会删除第二个和后继的重复元素。
+
+类似的，`merge` 和 `splice` 会销毁其参数。例如，通用版本的 `merge` 将合并的序列写到一个给定的目的迭代器；两个输入序列是不变的。而链表版本的 `merge` 函数会销毁给定的链表——元素从参数指定的链表中删除，被合并到调用 `merge` 的链表对象中。在 `merge` 之后，来自两个链表中的元素仍然存在，但它们都已在同一个链表中。
+
+**练习10.42：使用 `list` 代替 `vector`，重新实现10.2.3节（第343页）中的去除重复单词的程序。**
+
+本题要使用链表专用的 `sort` 和 `unique` 算法，与泛型算法的不同点有如下两点：
+
+1. 它们是以链表类的成员函数形式实现的，因此使用方式是在链表对象上调用它们，也并不需要迭代器参数指出处理的序列。
+
+2. 由于是以成员函数形式实现的，是直接操作容器而非通过迭代器访问容器元素，因此这些算法具有修改容器的能力（添加、删除元素）。例如，`unique` 会调用 `erase` 直接真正删除重复元素，容器的大小会变小，而不是像泛型 `unique` 算法那样只是覆盖重复元素，并不改变容器大小。因此程序已不再需要调用 `erase`了。
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <list>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+inline void output_words(list<string>& words)
+{
+    for (auto iter = words.begin(); iter != words.end(); iter++)
+        cout << *iter << " ";
+    cout << endl;
+}
+
+void elimDups(list<string>& words)
+{
+    output_words(words);
+    
+    words.sort();
+    output_words(words);
+    
+    words.unique();
+    output_words(words);
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file! " << endl;
+        exit(1);
+    }
+    
+    list<string> words;
+    string word;
+    while (in >> word)
+        words.push_back(word);
+    
+    elimpDups(words);
+    return 0;
+}
+```
