--- a/第7章 类.md
+++ b/第7章 类.md
@@ -82,6 +82,571 @@
 
 # 第7章 类
 
+## 7.0 结构体
+
+### 7.0.1 结构体基本概念
+
+结构体属于用户自定义的数据类型，允许用户存储不同的数据类型
+
+
+
+### 7.0.2 结构体定义和使用
+
+**语法：**`struct 结构体名 { 结构体成员列表 };`
+
+通过结构体创建变量的方式有三种：
+
+- struct 结构体名 变量名
+- struct 结构体名 变量名 = { 成员1值，成员2值…}
+- 定义结构体时顺便创建变量
+
+**示例：**
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+// 1、创建学生数据类型 ： 学生包括（姓名，年龄，分数）
+struct Student
+{
+    string name;
+    int age;
+    int score;
+}s3;
+
+// 2、通过学生类型创建具体学生
+int main() {
+    // 注意：struct 的关键字可以省略
+    // 2.1 struct Student s1
+    struct Student s1;
+    s1.name = "ZhangSan";
+    s1.age = 18;
+    s1.score = 100;
+    cout << "Name: " << s1.name << " Age: " << s1.age << " Score: " << s1.score << endl;
+
+    // 2.2 struct Student s2 = { ... }
+    struct Student s2 = {"LiSi", 19, 80};
+    cout << "Name: " << s2.name << " Age: " << s2.age << " Score: " << s2.score << endl;
+
+    // 2.3 在定义结构体时顺便创建结构体变量
+    s3.name = "WangWu";
+    s3.age = 20;
+    s3.score = 60;
+    cout << "Name: " << s3.name << " Age: " << s3.age << " Score: " << s3.score << endl;
+
+    system("pause");
+
+    return 0;
+}
+
+/*输出：
+Name: ZhangSan Age: 18 Score: 100
+Name: LiSi Age: 19 Score: 80     
+Name: WangWu Age: 20 Score: 60   
+*/
+```
+
+
+
+### 7.0.3 结构体数组
+
+**作用：**将自定义的结构体放入到数组中方便维护
+
+**语法：**`struct 结构体名 数组名[元素个数] = { {}, {}, ..., {} }`
+
+**示例：**
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+// 结构体数组
+// 1、定义结构体
+struct Student
+{
+    string name;
+    int age;
+    int score;
+};
+
+int main() {    
+    // 2、创建结构体数组
+    struct Student stuArray[3] =
+    {
+        {"ZhangSan", 18, 100},
+        {"LiSi", 28, 99},
+        {"WangWu", 38, 66}
+    };
+
+    // 3、给结构体数组中的元素赋值
+    stuArray[2].name = "ZhaoLiu";
+    stuArray[2].age = 80;
+    stuArray[2].score = 60;
+
+    // 4、遍历结构体数组
+    for (int i = 0; i < 3; i ++)
+    {
+        cout << "Name: " << stuArray[i].name
+             << " Age: " << stuArray[i].age
+             << " Score: " << stuArray[i].score << endl;
+    }
+
+    system("pause");
+
+    return 0;
+}
+
+/*输出：
+Name: ZhangSan Age: 18 Score: 100
+Name: LiSi Age: 28 Score: 99     
+Name: ZhaoLiu Age: 80 Score: 60  
+*/
+```
+
+
+
+### 7.0.4 结构体指针
+
+**作用：**通过指针访问结构体中的成员。
+
+- 利用操作符 `->` 可以通过结构体指针访问结构体属性
+
+**示例：**
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+//结构体指针
+//定义学生结构体
+struct Student
+{
+    string name; //姓名
+    int age;     //年龄
+    int score;   //分数
+};
+
+int main() {
+    //1、创建学生结构体变量
+    Student s = { "ZhangSan", 18, 100};
+
+    //2、通过指针指向结构体变量
+    Student *p = &s;
+
+    //3、通过指针访问结构体变量中的数据
+    cout << "Name: " << p->name << " Age: " << p->age << " Score: " << p->score << endl;
+
+    system("pause");
+
+    return 0;
+}
+
+/*输出：
+Name: ZhangSan Age: 18 Score: 100
+*/
+```
+
+
+
+### 7.0.5 结构体嵌套结构体
+
+**作用：**结构体中的成员可以是另一个结构体。
+
+**例如：**每个老师辅导一个学员，一个老师的结构体中，记录一个学生的结构体。
+
+**示例：**
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+//定义学生的结构体
+struct Student
+{
+    string name;
+    int age;
+    int score;
+};
+
+//定义老师的结构体
+struct Teacher
+{
+    int id;
+    string name;
+    int age;
+    struct Student stu; //辅导的学生
+};
+
+int main() {
+
+    //结构体嵌套结构体
+    //创建老师
+    Teacher t;
+    t.id = 10000;
+    t.name = "LaoWang";
+    t.age = 50;
+    t.stu.name = "XiaoWang";
+    t.stu.age = 20;
+    t.stu.score = 60;
+
+    cout << "Teacher's name: " << t.name << "\nTeacher's ID: " << t.age
+         << "\nHis student's name: " << t.stu.name << "\nStudent's age: " << t.stu.age
+         << "\nStudent's score: " << t.stu.score << endl;
+
+    system("pause");
+    return 0;
+}
+
+/*输出：
+Teacher's name: LaoWang     
+Teacher's ID: 50
+His student's name: XiaoWang
+Student's age: 20
+Student's score: 60
+*/
+```
+
+**总结：** 在结构体中可以定义另一个结构体作为成员，用来解决实际问题。
+
+### 7.0.6 结构体做函数参数
+
+**作用：**将结构体作为参数向函数中传递
+
+传递方式有两种：
+
+- 值传递
+- 地址传递
+
+**示例：**
+
+```c++
+#include <iostream>
+using namespace std;
+
+//定义学生结构体
+struct Student
+{
+    string name;
+    int age;
+    int score;
+};
+
+//打印学生信息函数
+//1、值传递
+void printStudent1(struct Student s)
+{
+    s.age = 100; //在函数体内将年龄改成100岁看结果
+    cout << "[1st] Name: " << s.name << " Age: " << s.age << " Score: " << s.score << endl;
+}
+
+//2、地址传递
+void printStudent2(struct Student *p)
+{
+    p->age = 200; //在函数体内将年龄改成200岁看结果
+    cout << "[2nd] Name: " << p->name << " Age: " << p->age << " Score: " << p->score << endl;
+}
+
+int main() {
+
+    //结构体做函数参数
+    //将学生传入到一个参数中，打印学生身上的所有信息
+
+    struct Student s;
+    s.name = "ZhangSan";
+    s.age = 20;
+    s.score = 85;
+
+    printStudent1(s);
+    printStudent2(&s);
+
+    cout << "Inside Main Fuction, Name: " << s.name << " Age: " << s.age << " Score: " << s.score << endl;
+
+    system("pause");
+    return 0;
+}
+/*输出：
+//1.值传递，主函数里的没被影响
+[1st] Name: ZhangSan Age: 100 Score: 85
+Inside Main Fuction, Name: ZhangSan Age: 20 Score: 85
+
+//2.地址传递，主函数中的值也被改变成了200岁
+[2nd] Name: ZhangSan Age: 200 Score: 85
+Inside Main Fuction, Name: ZhangSan Age: 200 Score: 85
+*/
+```
+
+**总结：**如果不想修改主函数中的数据，用值传递，反之用地址传递。
+
+
+
+### 7.0.7 结构体中`const`使用场景
+
+**作用：**用 `const` 来防止误操作。
+
+**示例：**
+
+```c++
+#include <iostream>
+using namespace std;
+
+//const的使用场景
+struct Student
+{
+    string name;
+    int age;
+    int score;
+};
+
+//将函数中的形参改为指针，可以减少内存空间，而且不会复制新的副本出来
+void printStudents(const Student *s)
+{
+    // s->age = 150; //加入const之后，一旦有修改的操作就会报错，可以防止误操作
+    cout << " Name: " << s->name << " Age: " << s->age << " Score: " << s->score << endl;
+}
+
+int main()
+{
+    //创建结构体变量
+    struct Student s = { "ZhangSan", 15, 70 };
+
+    //通过函数打印结构体变量信息
+    printStudents(&s);
+
+    cout << " Name: " << s.name << " Age: " << s.age << " Score: " << s.score << endl;
+
+    system("pause");
+    return 0;
+}
+```
+
+
+
+### 7.0.8 结构体案例
+
+#### 案例一
+
+案例描述：
+
+学校正在做毕设项目，每名老师带领 `5` 个学生，总共有 `3` 名老师，需求如下：
+
+设计学生和老师的结构体，其中在老师的结构体中，有老师姓名和一个存放 `5` 名学生的数组作为成员
+
+学生的成员有姓名、考试分数，创建数组存放 `3` 名老师，通过函数给每个老师及所带的学生赋值
+
+最新中打印出老师数据以及老师所带的学生数据。
+
+```c++
+#include <iostream>
+#include <string>
+#include <ctime>
+using namespace std;
+
+//学生的结构体定义
+struct Student
+{
+    string sName;
+    int score;
+};
+
+//老师的结构体定义
+struct Teacher
+{
+    string tName;
+    struct Student sArray[5];
+};
+
+//给老师和学生赋值的函数
+void allocateSpace (struct Teacher tArray[], int len)
+{
+    string nameSeed = "ABCDE";
+    for (int i = 0; i < len; i ++) {
+        tArray[i].tName = "Teacher_";
+        tArray[i].tName += nameSeed[i];
+
+        //通过循环给每名老师所带的学生赋值
+        for (int j = 0; j < 5; j ++)
+        {
+            tArray[i].sArray[j].sName = "Student_";
+            tArray[i].sArray[j].sName += nameSeed[j];
+
+            int random = rand() % 61 + 40; //分数在40~100分之间的随机数
+            tArray[i].sArray[j].score = random;
+        }
+    }
+
+}
+
+//打印所有的信息
+void printInfo(struct Teacher tArray[], int len)
+{
+    for (int i = 0; i < len; i ++)
+    {
+        cout << "Teacher Name: " << tArray[i].tName << endl;
+
+        for (int j = 0; j < 5; j ++)
+        {
+            cout << "\tStudent Name: " << tArray[i].sArray[j].sName
+                 << " Score: " << tArray[i].sArray[j].score << endl;
+        }
+    }
+}
+
+int main() {
+    //随机数种子
+    srand((unsigned int) time(NULL));
+
+    //1、创建3名老师的数组
+    struct Teacher tArray[3];
+
+    //2、通过函数给3名老师的信息赋值，并给老师带的学生信息赋值
+    int len = sizeof(tArray) / sizeof(tArray[0]);
+    allocateSpace(tArray, len);
+
+    //3、打印所有老师及所带的学生信息
+    printInfo(tArray, len);
+    
+    return 0;
+}
+
+/*输出：
+Teacher Name: Teacher_A
+        Student Name: Student_A Score: 97
+        Student Name: Student_B Score: 61
+        Student Name: Student_C Score: 73
+        Student Name: Student_D Score: 63
+        Student Name: Student_E Score: 94
+Teacher Name: Teacher_B
+        Student Name: Student_A Score: 58
+        Student Name: Student_B Score: 71
+        Student Name: Student_C Score: 86
+        Student Name: Student_D Score: 42
+        Student Name: Student_E Score: 96
+Teacher Name: Teacher_C
+        Student Name: Student_A Score: 87
+        Student Name: Student_B Score: 84
+        Student Name: Student_C Score: 73
+        Student Name: Student_D Score: 57
+        Student Name: Student_E Score: 80
+*/
+```
+
+
+
+#### 案例二
+
+案例描述：
+
+设计一个英雄的结构体，包括成员姓名，年龄，性别；创建结构体数组，数组中存放 `5` 名英雄。
+
+通过冒泡排序的算法，将数组中的英雄按照年龄进行升序排序，最终打印排序后的结果。
+
+五名英雄信息如下：
+
+```c++
+        {"刘备", 23, "男"},
+        {"关羽", 22, "男"},
+        {"张飞", 20, "男"},
+        {"赵云", 21, "男"},
+        {"貂蝉", 19, "女"},
+```
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+//1、设计英雄结构体
+struct Hero
+{
+    string name;
+    int age;
+    string gender;
+};
+
+//3、冒泡排序 实现年龄升序排列
+void bubbleSort(struct Hero heroArray[], int len)
+{
+    for (int i = 0; i < len - 1; i ++)
+    {
+        for (int j = 0; j < len - i - 1; j ++)
+        {
+            //如果 j 下标的元素年龄 大于 j+1 下标的元素的年龄，交换两个元素
+            if (heroArray[j].age > heroArray[j + 1].age)
+            {
+                struct Hero temp = heroArray[j];
+                heroArray[j] = heroArray[j + 1];
+                heroArray[j + 1] = temp;
+            }
+        }
+    }
+}
+
+//4、打印排序后数组中的信息
+void printHero(struct Hero heroArray[], int len)
+{
+    cout << "排序后的打印：" << endl;
+    for (int i = 0; i < len; i ++)
+    {
+        cout << "姓名：" << heroArray[i].name << " 年龄：" << heroArray[i].age
+             << " 性别：" << heroArray[i].gender << endl;
+    }
+}
+
+int main() {
+    //2、创建数组存放 5 名英雄
+    struct Hero heroArray[5] = 
+    {
+        {"刘备", 23, "男"},
+        {"关羽", 22, "男"},
+        {"张飞", 20, "男"},
+        {"赵云", 21, "男"},
+        {"貂蝉", 19, "女"}
+    };
+
+    int len = sizeof(heroArray) / sizeof(heroArray[0]);
+    cout << "排序前的打印：" << endl;
+    for (int i = 0; i < len; i ++) {
+        cout << "姓名：" << heroArray[i].name << " 年龄：" << heroArray[i].age
+             << " 性别：" << heroArray[i].gender << endl;
+    }
+
+    //3、对数组进行排序，按照年龄进行升序排序
+    bubbleSort(heroArray, len);
+
+    //4、将排序后的结果打印输出
+    printHero(heroArray, len);
+
+    system("pause");
+
+    return 0;
+}
+/*输出：
+
+排序前的打印：
+姓名：刘备 年龄：23 性别：男
+姓名：关羽 年龄：22 性别：男
+姓名：张飞 年龄：20 性别：男
+姓名：赵云 年龄：21 性别：男
+姓名：貂蝉 年龄：19 性别：女
+
+排序后的打印：
+姓名：貂蝉 年龄：19 性别：女
+姓名：张飞 年龄：20 性别：男
+姓名：赵云 年龄：21 性别：男
+姓名：关羽 年龄：22 性别：男
+姓名：刘备 年龄：23 性别：男
+
+*/
+```
+
+
+
+## 7.1 定义抽象数据类型
+
 类的基本思想是**数据抽象**(data abstraction)和**封装**(encapsulation)。
 
 数据抽象是一种依赖于**接口**(interface)和**实现**(implementation)分离的编程（以及设计）技术。
@@ -90,8 +655,6 @@
 **封装**实现了类的接口和实现的分离。封装后的类隐藏了它的实现细节，类的用户只能使用接口而无法访问实现部分。
 
 类要想实现数据抽象和封装，需要首先定义一个**抽象数据类型**(abstract data type)。
-
-## 7.1 定义抽象数据类型
 
 ### 7.1.1 设计Sales_data类
 
