--- a/第6章 函数.md
+++ b/第6章 函数.md
@@ -436,6 +436,59 @@ After the exchange: a = 10, b = 5
 // 与使用指针相比，使用引用交换变量的内容从形式上看更简单一些，并且无须额外声明指针变量，也避免了拷贝指针的值。
 ```
 
+#### 总结：值传递 vs 地址传递（指针传递）
+
+**如果不想修改实参，就用值传递，如果想修改实参，就用地址传递。**
+
+
+
+#### 指针数组函数案例
+
+```c++
+//冒泡排序
+#include <iostream>
+using namespace std;
+
+//冒泡排序函数
+void bubbleSort(int *arr, int len)//int *arr 原本写成 int arr[]
+{
+    for (int i = 0; i < len - 1; i ++)
+        for (int j = 0; j < len - i - 1; j ++) {
+            // 如果 j > j + 1 的值，交换数字
+            if (arr[j] > arr[j + 1]) {
+                int temp = arr[j];
+                arr[j] = arr[j + 1];
+                arr[j + 1] = temp;
+            }
+        }
+}
+
+//打印数组
+void printArray(int *arr, int len)
+{
+    for (int i = 0; i < len; i ++)
+        cout << arr[i] << ' ';
+    cout << endl;
+}
+
+int main() {
+    int arr[10] = { 4,3,6,9,1,2,10,8,7,5 };
+    int len = sizeof(arr) / sizeof(arr[0]);
+
+    bubbleSort(arr, len);
+    printArray(arr, len);
+
+    system("pause");
+    return 0;
+}
+
+/*输出：
+1 2 3 4 5 6 7 8 9 10 
+*/
+```
+
+
+
 ### 6.2.2 传引用参数
 
 ```cpp
