--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -670,7 +670,7 @@ const int k;        // 错误： k 是一个未经初始化的常量
 
 **默认状态下，const 对象仅在文件内有效：**
 
-默认情况下，const 对象被设定为仅在文件内有效，当多个文件中出现了同名的const变量时，其实等同于在不同文件中分别定义了独立的变量。
+默认情况下，const 对象被设定为仅在文件内有效，当多个文件中出现了同名的 const 变量时，其实等同于在不同文件中分别定义了独立的变量。
 
 如果想在多个文件之间共享`const`对象，必须在变量的定义之前添加`extern`关键字。
 
@@ -878,8 +878,8 @@ p = &b;  //错误
 ### 2.4.3 顶层 const
 
 指针本身是一个对象，它又可以指向另一个对象。因此，指针本身是不是常量以及指针所指的是不是常量就是两个相互独立的问题。
-用名词**顶层 const (top-level const)**表示指针本身是个常量；
-用名词**底层 const (low-level const)**表示指针所指的对象是一个常量。
+用名词 **顶层 `const (top-level const)`** 表示指针本身是个常量；
+用名词 **底层 `const (low-level const)`** 表示指针所指的对象是一个常量。
 
 顶层 const 可以表示任意的对象是常量，这一点对任何数据类型都适用，如算术类型、类、指针等。
 底层 const 则与指针和引用等复合类型的基本类型部分有关。
