--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -878,8 +878,8 @@ p = &b;  //错误
 ### 2.4.3 顶层 const
 
 指针本身是一个对象，它又可以指向另一个对象。因此，指针本身是不是常量以及指针所指的是不是常量就是两个相互独立的问题。
-用名词 **顶层 `const (top-level const)`** 表示指针本身是个常量；
-用名词 **底层 `const (low-level const)`** 表示指针所指的对象是一个常量。
+- 用名词 **顶层 `const (top-level const)`** 表示指针本身是个常量；
+- 用名词 **底层 `const (low-level const)`** 表示指针所指的对象是一个常量。
 
 顶层 const 可以表示任意的对象是常量，这一点对任何数据类型都适用，如算术类型、类、指针等。
 底层 const 则与指针和引用等复合类型的基本类型部分有关。
