--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -410,7 +410,7 @@ i = 5; ri = 10;
 std::cout << i << " " << ri << std::endl;
 ```
 
-解答：程序的输出结果是 10 10.
+解答：程序的输出结果是 $10$ $10$。
 引用不是对象，它只是为已经存在的对象起了另外一个名字，因此`ri`实际上是`i`的别名。在上述程序中，首先将`i`赋值为 5，然后把这个值更新为 10。因为`ri`是`i`的引用，所以它们的输出结果是一样的。
 
 ### 2.3.2 指针(pointer)
