--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -714,6 +714,8 @@ double dval = 3.14; // dval 是一个双精度浮点数，它的值可以改变
 cptr = &dval;       // 正确：但是不能通过 cptr 改变 dval 的值
 ```
 
+这里 `const double *cptr = &pi;` 中 `cptr` 是一个指向双精度常量的指针，即指向常量的指针。我们不能通过该指针`cptr`改变对象`pi`的值，但我们允许指向常量的指针 `cptr` 指向一个非常量对象 `dval`。
+
 注意：所谓**指向常量的指针**仅仅要求不能通过该指针改变对象的值，而没有规定那个对象的值不能通过其他途径改变。
 可以这样想，所谓指向常量的指针或引用，不过是指针或引用“自以为是”罢了，它们觉得自己指向了常量，所以自觉地不去改变所指对象的值。
 
