--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -723,7 +723,7 @@ cptr = &dval;       // 正确：但是不能通过 cptr 改变 dval 的值
 
 指针是对象而引用不是，因此就像其他对象类型一样，允许把指针本身定为常量。
 
-**常量指针(const pointer)** 必须初始化，而且一旦初始化完成，则它的值（也就四存放在指针中的那个地址）就不能再改变了。把`*`放在 const 关键字之前用以说明指针是一个常量，这样的书写形式隐含着一层意味，即不变的是指针本身的值而非指向的那个值。
+**常量指针(const pointer)** 必须初始化，而且一旦初始化完成，则它的值（也就是存放在指针中的那个地址）就不能再改变了。把`*`放在 const 关键字之前用以说明指针是一个常量，这样的书写形式隐含着一层意味，即不变的是指针本身的值而非指向的那个值。
 
 ```cpp
 int errNumb = 0;
