--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -852,7 +852,7 @@ const int *p = &a;
 p = &b;  //正确，指针指向可以改
 ```
 
-![image-20210428174213074](D:\GitHub\GitHub_code\CPP_Primer_Notes_Public\第2章 变量和基本类型\image-20210428174213074.png)
+![常量指针](D:\GitHub\GitHub_code\CPP_Primer_Notes_Public\CPP Primer Practice\第2章 变量和基本类型\常量指针.png)
 
 **2. 指针常量。`const` 修饰指针，则指针为不可变量**
 
