--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -852,7 +852,7 @@ const int *p = &a;
 p = &b;  //正确，指针指向可以改
 ```
 
-![常量指针](D:\GitHub\GitHub_code\CPP_Primer_Notes_Public\CPP Primer Practice\第2章 变量和基本类型\常量指针.png)
+![常量指针](https://cdn.acwing.com/media/article/image/2022/01/14/41956_7cce2f1375-%E5%B8%B8%E9%87%8F%E6%8C%87%E9%92%88.png)
 
 **2. 指针常量。`const` 修饰指针，则指针为不可变量**
 
