--- a/CPP Primer Notes/第04章 表达式.md
+++ b/CPP Primer Notes/第04章 表达式.md
@@ -87,7 +87,10 @@
 
 #### 左值和右值
 
-左值(lvalue) vs 右值(rvalue)
+左值($lvalue$) vs 右值($rvalue$)
+
+在 C++ 语言中，二者的区别是：一个左值表达式的求值结果是一个对象或者一个函数，然而以常量对象为代表的某些左值实际上不能作为赋值语句的左侧运算对象。
+此外，虽然某些表达式的求值结果是对象，但它们是右值而非左值。
 
 一个简单的归纳：当一个对象被用作右值的时候，用的是对象的值（内容）；
 当对象被用作左值的时候，用的是对象的身份（在内存中的位置）。
@@ -103,7 +106,8 @@ cout << *p;         // 由符号 * 得到指针 p 所指的对象，输出 42
 ```
 
 假定`p`的类型是`int*`，因为解引用运算符生成左值，所以`decltype(*p)`的结果是`int&`。
-另一方面，因为取地址运算符生成右值，所以`decltype(&p)`的结果是`int**`
+
+另一方面，因为取地址运算符生成右值，所以`decltype(&p)`的结果是`int**`，也就是说，结果是一个指向整型指针的指针。
 
 ### 4.1.2 优先级与结合律
 
