--- a/CPP Primer Notes/第04章 表达式.md
+++ b/CPP Primer Notes/第04章 表达式.md
@@ -6,7 +6,7 @@
       - [组合运算符和运算对象](#组合运算符和运算对象)
       - [运算对象转换](#运算对象转换)
       - [重载运算符](#重载运算符)
-      - [左值和右值](#左值和右值)
+      - [左值和右值 P121](#左值和右值-p121)
     - [4.1.2 优先级与结合律](#412-优先级与结合律)
       - [优先级与结合律有何影响](#优先级与结合律有何影响)
     - [4.1.3 求值顺序](#413-求值顺序)
@@ -85,7 +85,7 @@
 
 当运算符作用域类类型的运算对象时，用户可以自行定义其含义。因为这种自定义的过程事实上是为已存在的运算符赋予了另外一层含义，所以称之为重载运算符(overloaded operator)。
 
-#### 左值和右值
+#### 左值和右值 P121
 
 左值($lvalue$) vs 右值($rvalue$)
 
