--- a/CPP Primer Notes/第03章 字符串、向量和数组.md
+++ b/CPP Primer Notes/第03章 字符串、向量和数组.md
@@ -835,7 +835,7 @@ BORDORA
 | `v[n]`               | 返回`v`中第`n`个位置上元素的引用                             |
 | `v1 = v2`            | 用`v2`中元素的拷贝替换`v1`中的元素                           |
 | `v1 = {a, b, c...}`  | 用列表中元素的拷贝替换`v1`中的元素                           |
-| `v1 == v2`           | `v1`和`v2`相等当且晋档它们的元素数量相同且对应位置的元素值都相同 |
+| `v1 == v2`           | `v1`和`v2`相等当且仅当它们的元素数量相同且对应位置的元素值都相同 |
 | `v1 != v2`           |                                                        |
 | `<`, `<=`, `>`, `>=` | 顾名思义，以字典顺序进行比较 |
 
