--- a/CPP Primer Notes/第09章 顺序容器.md
+++ b/CPP Primer Notes/第09章 顺序容器.md
@@ -1,65 +1,65 @@
 <!-- TOC -->
 
 - [第9章 顺序容器 (sequential container)](#第9章-顺序容器-sequential-container)
-    - [9.1 顺序容器概述](#91-顺序容器概述)
-        - [确定使用哪种顺序容器](#确定使用哪种顺序容器)
-    - [9.2 容器库概览](#92-容器库概览)
-        - [对容器可以保存的元素类型的限制](#对容器可以保存的元素类型的限制)
-            - [表9.2：容器操作](#表92容器操作)
-        - [9.2.1 迭代器](#921-迭代器)
-            - [迭代器范围](#迭代器范围)
-            - [使用左闭合范围蕴含的变成假定](#使用左闭合范围蕴含的变成假定)
-        - [9.2.2 容器类型成员](#922-容器类型成员)
-        - [9.2.3 `begin`和`end`成员](#923-begin和end成员)
-        - [9.2.4 容器定义和初始化](#924-容器定义和初始化)
-            - [将一个容器初始化为另一个容器的拷贝](#将一个容器初始化为另一个容器的拷贝)
-            - [列表初始化](#列表初始化)
-            - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
-            - [标准库`array`具有固定大小](#标准库array具有固定大小)
-        - [9.2.5 赋值和swap](#925-赋值和swap)
-            - [使用 `assign`（仅顺序容器）](#使用-assign仅顺序容器)
-            - [使用 `swap`](#使用-swap)
-        - [9.2.6 容器大小操作](#926-容器大小操作)
-        - [9.2.7 关系运算符](#927-关系运算符)
-            - [容器的关系运算符使用元素的关系运算符完成比较](#容器的关系运算符使用元素的关系运算符完成比较)
-    - [9.3 顺序容器操作](#93-顺序容器操作)
-        - [9.3.1 向顺序容器添加元素](#931-向顺序容器添加元素)
-            - [使用`push_back`](#使用push_back)
-            - [使用`push_front`](#使用push_front)
-            - [在容器中的特定位置添加元素](#在容器中的特定位置添加元素)
-            - [插入范围内元素](#插入范围内元素)
-            - [使用`insert`的返回值](#使用insert的返回值)
-            - [使用`emplace`操作](#使用emplace操作)
-        - [9.3.2 访问元素](#932-访问元素)
-            - [访问成员函数返回的是引用](#访问成员函数返回的是引用)
-            - [下标操作和安全的随机访问](#下标操作和安全的随机访问)
-        - [9.3.3 删除元素](#933-删除元素)
-            - [`pop_front`和`pop_back`成员函数](#pop_front和pop_back成员函数)
-            - [从容器内部删除一个元素](#从容器内部删除一个元素)
-            - [删除多个元素](#删除多个元素)
-        - [9.3.4 特殊的`forward_list`操作](#934-特殊的forward_list操作)
-        - [9.3.5 改变容器大小](#935-改变容器大小)
-        - [9.3.6 容器操作可能使迭代器失效](#936-容器操作可能使迭代器失效)
-            - [编写改变容器的循环程序](#编写改变容器的循环程序)
-            - [不要保存`end`返回的迭代器](#不要保存end返回的迭代器)
-    - [9.4 vector对象是如何增长的 (倍增)](#94-vector对象是如何增长的-倍增)
-        - [管理容量的成员函数](#管理容量的成员函数)
-        - [`capacity`和`size`](#capacity和size)
-    - [9.5 额外的string操作](#95-额外的string操作)
-        - [9.5.1 构造string的其他方法](#951-构造string的其他方法)
-            - [`substr`操作](#substr操作)
-        - [9.5.2 改变string的其他方法](#952-改变string的其他方法)
-            - [`append`和`replace`函数](#append和replace函数)
-            - [改变`string`的多种重载函数](#改变string的多种重载函数)
-        - [9.5.3 `string` 搜索操作](#953-string-搜索操作)
-            - [指定在哪里开始搜索](#指定在哪里开始搜索)
-            - [逆向搜素 `rfind`](#逆向搜素-rfind)
-        - [9.5.4 compare函数](#954-compare函数)
-        - [9.5.5 数值转换](#955-数值转换)
-    - [9.6 容器适配器 (adapter)](#96-容器适配器-adapter)
-        - [定义一个适配器](#定义一个适配器)
-        - [栈适配器](#栈适配器)
-        - [队列适配器](#队列适配器)
+  - [9.1 顺序容器概述](#91-顺序容器概述)
+    - [确定使用哪种顺序容器](#确定使用哪种顺序容器)
+  - [9.2 容器库概览](#92-容器库概览)
+    - [对容器可以保存的元素类型的限制](#对容器可以保存的元素类型的限制)
+      - [表9.2：容器操作](#表92容器操作)
+    - [9.2.1 迭代器](#921-迭代器)
+      - [迭代器范围](#迭代器范围)
+      - [使用左闭合范围蕴含的变成假定](#使用左闭合范围蕴含的变成假定)
+    - [9.2.2 容器类型成员](#922-容器类型成员)
+    - [9.2.3 `begin`和`end`成员](#923-begin和end成员)
+    - [9.2.4 容器定义和初始化](#924-容器定义和初始化)
+      - [将一个容器初始化为另一个容器的拷贝](#将一个容器初始化为另一个容器的拷贝)
+      - [列表初始化](#列表初始化)
+      - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
+      - [标准库`array`具有固定大小](#标准库array具有固定大小)
+    - [9.2.5 赋值和swap](#925-赋值和swap)
+      - [使用 `assign`（仅顺序容器）](#使用-assign仅顺序容器)
+      - [使用 `swap`](#使用-swap)
+    - [9.2.6 容器大小操作](#926-容器大小操作)
+    - [9.2.7 关系运算符](#927-关系运算符)
+      - [容器的关系运算符使用元素的关系运算符完成比较](#容器的关系运算符使用元素的关系运算符完成比较)
+  - [9.3 顺序容器操作](#93-顺序容器操作)
+    - [9.3.1 向顺序容器添加元素](#931-向顺序容器添加元素)
+      - [使用`push_back`](#使用push_back)
+      - [使用`push_front`](#使用push_front)
+      - [在容器中的特定位置添加元素](#在容器中的特定位置添加元素)
+      - [插入范围内元素](#插入范围内元素)
+      - [使用`insert`的返回值](#使用insert的返回值)
+      - [使用`emplace`操作](#使用emplace操作)
+    - [9.3.2 访问元素](#932-访问元素)
+      - [访问成员函数返回的是引用](#访问成员函数返回的是引用)
+      - [下标操作和安全的随机访问](#下标操作和安全的随机访问)
+    - [9.3.3 删除元素](#933-删除元素)
+      - [`pop_front`和`pop_back`成员函数](#pop_front和pop_back成员函数)
+      - [从容器内部删除一个元素](#从容器内部删除一个元素)
+      - [删除多个元素](#删除多个元素)
+    - [9.3.4 特殊的`forward_list`操作](#934-特殊的forward_list操作)
+    - [9.3.5 改变容器大小](#935-改变容器大小)
+    - [9.3.6 容器操作可能使迭代器失效](#936-容器操作可能使迭代器失效)
+      - [编写改变容器的循环程序](#编写改变容器的循环程序)
+      - [不要保存`end`返回的迭代器](#不要保存end返回的迭代器)
+  - [9.4 vector对象是如何增长的 (倍增)](#94-vector对象是如何增长的-倍增)
+    - [管理容量的成员函数](#管理容量的成员函数)
+    - [`capacity`和`size`](#capacity和size)
+  - [9.5 额外的string操作](#95-额外的string操作)
+    - [9.5.1 构造string的其他方法](#951-构造string的其他方法)
+      - [`substr`操作](#substr操作)
+    - [9.5.2 改变string的其他方法](#952-改变string的其他方法)
+      - [`append`和`replace`函数](#append和replace函数)
+      - [改变`string`的多种重载函数](#改变string的多种重载函数)
+    - [9.5.3 `string` 搜索操作](#953-string-搜索操作)
+      - [指定在哪里开始搜索](#指定在哪里开始搜索)
+      - [逆向搜素 `rfind`](#逆向搜素-rfind)
+    - [9.5.4 compare函数](#954-compare函数)
+    - [9.5.5 数值转换](#955-数值转换)
+  - [9.6 容器适配器 (adapter)](#96-容器适配器-adapter)
+    - [定义一个适配器](#定义一个适配器)
+    - [栈适配器](#栈适配器)
+    - [队列适配器](#队列适配器)
 
 <!-- /TOC -->
 
@@ -1544,8 +1544,8 @@ while (begin != v.end()) {
 
 | 表9.10：            | 容器大小管理操作                                     |
 | ------------------- | ---------------------------------------------------- |
-|                     | `shrink_to_fit`只适用于`vector`、`string`和`deque`。 |
-|                     | `capacity`和`reserve`只适用于`vector`和`string`。    |
+| `shrink_to_fit`     | 只适用于`vector`、`string`和`deque`。 |
+|`capacity`和`reserve`| 只适用于`vector`和`string`。    |
 | `c.shrink_to_fit()` | 请将`capacity()`减少为与`size()`相同大小             |
 | `c.capacity()`      | 不重新分配内存空间的话，`c`可以保存多少元素          |
 | `c.reserve(n)`      | 分配至少能容纳`n`个元素的内存空间                    |
