--- a/CPP Primer Notes/第11章 关联容器.md
+++ b/CPP Primer Notes/第11章 关联容器.md
@@ -685,7 +685,7 @@ map<string, int>::mapped_type v5;   // v5 是一个 int
 ### 11.3.1 关联容器迭代器
 
 当解引用一个关联容器迭代器时，我们会得到一个类型为容器的 `value_type` 的值的引用。
-对 `map` 而言，`value_type` 是一个 `pair` 类型．其 `first` 成员保存 `const 的关键字，`second` 成员保存值：
+对 `map` 而言，`value_type` 是一个 `pair` 类型．其 `first` 成员保存 `const` 的关键字，`second` 成员保存值：
 
 ```cpp
 // 获得指向 word_count 中的一个元素的迭代器
