--- a/CPP Primer Practice/第10 章 泛型算法/10.3.1 向算法传递函数/练习10.13.md
+++ b/CPP Primer Practice/第10 章 泛型算法/10.3.1 向算法传递函数/练习10.13.md
@@ -1,4 +1,4 @@
-练习10.13：标准库定义了名为 `partition` 的算法，它接受一个谓词，对容器内容进行划分，使得谓词为 `true` 的值会排在容器的前半部分，而使谓词为 `false` 的值会排在后半部分。算法返回一个迭代器．指向最后一个使谓词为 `true` 的元素之 后的位置。编写函数．接受一个 `string`，返回一个 `bool` 值，指出 `string` 是否有 `5` 个或更多字符。使用此函数划分 `words`。打印出长度大于等于 `5` 的元素。
+练习10.13：标准库定义了名为 `partition` 的算法，它接受一个谓词，对容器内容进行划分，使得谓词为 `true` 的值会排在容器的前半部分，而使谓词为 `false` 的值会排在后半部分。算法返回一个迭代器．指向最后一个使谓词为 `true` 的元素之后的位置。编写函数．接受一个 `string`，返回一个 `bool` 值，指出 `string` 是否有 `5` 个或更多字符。使用此函数划分 `words`。打印出长度大于等于 `5` 的元素。
 
 【出题思路】 练习定义和使用一元谓词
 【解答】 本题要求谓词判断一个 `string` 对象的长度是否大于等于 `5`，而不是比较两个 `string` 对象，因此它应是一个一元谓词。其他与上一题基本类似。但需要注意，我们应该保存 `partition` 返回的迭代器 `iter`，打印范围 `[words.begin(), iter)` 中的字符串。
@@ -21,7 +21,7 @@ inline void output_words(vector<string>::iterator beg, vector<string>::iterator 
 
 bool five_or_more(const string &s1)
 {
-    return s1.sisze() >= 5;
+    return s1.size() >= 5;
 }
 
 int main(int argc, char *argv[])
