--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -850,7 +850,7 @@ int b = 10;
 int *p = &a;
 ```
 
-```c++
+```cpp
 const int *p = &a;
 /* 常量指针
    特点：指针的指向可以修改，
@@ -871,7 +871,7 @@ int *const p2 = &c; //*在前，定义为指针常量
 
 **2. 指针常量。`const` 修饰指针，则指针为不可变量**
 
-```c++
+```cpp
 int *const p = &a;
 /*指针常量
 特点：指针的指向不可以改，指针指向的值可以改*/
@@ -883,7 +883,7 @@ p = &b;  //错误：指针指向不可以改
 
 **3. `const` 既修饰指针，又修饰指针指向的内容，则指针和指针指向的内容都为不可变量**
 
-```c++
+```cpp
 const int * const p = &a;
 // 特点：指针的指向和指针指向的值都不可以改
 
