--- a/CPP Primer Notes/第06章 函数.md
+++ b/CPP Primer Notes/第06章 函数.md
@@ -16,6 +16,8 @@
   - [6.2 参数传递](#62-参数传递)
     - [6.2.1 传值参数](#621-传值参数)
       - [指针形参](#指针形参)
+      - [总结：值传递 vs 地址传递（指针传递）](#总结值传递-vs-地址传递指针传递)
+      - [指针数组函数案例](#指针数组函数案例)
     - [6.2.2 传引用参数](#622-传引用参数)
       - [使用引用避免拷贝](#使用引用避免拷贝)
       - [使用引用形参返回额外信息](#使用引用形参返回额外信息)
@@ -1544,7 +1546,7 @@ decltype(odd) &arrPtr(int i)
 直接编写返回数组引用的函数比较繁琐且不易理解，使用**类型别名**、**尾置返回类型**和`decltype`关键字都可以简化这一过程。
 
 ```cpp
-// 本身的形式声明函数
+// 本身的形式声明函数，返回数组的引用并且该数组包含10个string对象
 string (&func( ))[10];
 
 // [1] 使用类型别名：
