--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -1160,7 +1160,7 @@ i
 ### 2.5.3 decltype 类型指示符
 
 解决的情形：希望从表达式的类型推断出要定义的变量的类型，但是不想用该表达式的值初始化变量。
-作用是选择并返回操作数的数据类型，编译器分析表达式并得到它的类型，却不世纪计算表达式的值。
+作用是选择并返回操作数的数据类型，编译器分析表达式并得到它的类型，却不实际计算表达式的值。
 
 decltype 处理顶层 const 和引用的方式与 auto 有些许不同。如果 decltype 使用的表达式是一个变量，则 decltype 返回该变量的类型（包括顶层 const 和引用在内）：
 
