--- a/CPP Primer Notes/第02章 变量和基本类型.md
+++ b/CPP Primer Notes/第02章 变量和基本类型.md
@@ -1184,12 +1184,12 @@ decltype(*p) c;     // 错误：c 是 int&，引用类型，必须初始化
 
 如果表达式的内容是解引用操作，则 decltype 将得到引用类型。解引用指针可以得到指针所指的对象，而且还能给这个对象赋值。因此 `decltype(*p)`的结果类型就是`int&`，而非`int`。
 
-疑问：为什么 `decltype(*p)`的结果类型就是`int&`，而非`int` 呢？
+【疑问】：为什么 `decltype(*p)`的结果类型就是`int&`，而非`int` 呢？
 
-回答：因为 内置解引用运算符的求值结果是左值， `*p` 是个表达式，decltype 作用于该表达式（不是变量）得到一个引用类型。
-举个例子，假定 `p` 的类型是 `int*`，因为解引用运算符生成左值，所以 `decltype(*p)` 的结果是 `int&`。(P121)
-
-对左值可以进行修改，也可能左值才有地址。比如，解引用指针可以得到指针所指对象，而且还能给这个对象赋值。
+【回答】：
+- 首先，区分左值和右值。(P121) 简单归纳：当一个对象被用作右值的时候，用的是对象的值（内容）；当对象被用作左值的时候，用的是对象的身份（在内存中的位置）。因此，左值才有地址吧。
+- 对左值可以进行修改，解引用指针可以得到指针所指对象，而且还能给这个对象赋值，所以内置解引用运算符的求值结果是左值。
+- 举个例子，假定 `p` 的类型是 `int*`，解引用运算符的求值结果 `*p` 是个表达式，解引用运算符生成左值，decltype 作用于该表达式（不是变量）得到一个引用类型，所以 `decltype(*p)` 的结果是 `int&`。(P121)
 
 (P48) 对指针解引用会得出所指的对象，因此如果给解引用的结果赋值，实际上也就是给指针所指的对象赋值：
 
@@ -1197,7 +1197,7 @@ decltype(*p) c;     // 错误：c 是 int&，引用类型，必须初始化
 int ival = 42;
 int *p = &ival; // p 存放着变量 ival 的地址，或者说 p 是指向变量 ival 的指针
 cout << *p;     // 由符号 * 得到指针 p 所指的对象，输出 42
-*p = 0;         // 由符号 * 得到指针 p 所指的对象，即可经由 p 为变量 ival 赋值
+*p = 0;         // 由符号 * 得到指针 p 所指的对象，即可经由 p 为变量 ival 赋值（修改）
 cout << *p;     // 输出 0
 ```
 
