--- a/CPP Primer Notes/第10 章 泛型算法.md
+++ b/CPP Primer Notes/第10 章 泛型算法.md
@@ -93,7 +93,7 @@ cout << "The value " << val
 ```cpp
 // 可以用 find 在一个 string 的 list 中查找一个给定值：
 string val = "a value"; // 我们要查找的值
-// 此时调用在 list 中查找 string 元素
+// 此调用在 list 中查找 string 元素
 auto result = find(lst.cbegin(), lst.cend(), val);
 ```
 
