--- a/CPP Primer Notes/第10 章 泛型算法.md
+++ b/CPP Primer Notes/第10 章 泛型算法.md
@@ -1008,6 +1008,16 @@ cout << f() << endl; // 打印42
 作为一个带参数的 `lambda` 的例子，我们可以编写一个与 `isShorter` 函数完成相同功能的 `lambda`：
 
 ```cpp
+// 比较函数，用来按长度排序单词
+bool isShorter(const string &s1, const string &s2)
+{
+    return s1.size() < s2.size();
+}
+// 按长度由短至长排序 words
+sort(words.begin(), words.end(), isShorter);
+```
+
+```cpp
 [](const string &a, const string &b)
 	{ return a.size() < b.size(); }
 ```
