--- a/CPP Primer Notes/第10 章 泛型算法.md
+++ b/CPP Primer Notes/第10 章 泛型算法.md
@@ -1336,7 +1336,7 @@ int main(int argc, char *argv[])
 
 对于本题而言，若使用 `find_if`，要求序列已按字符串长度递增顺序排好序。`find_if` 返回第一个长度 `>=sz` 的字符串的位置 `wc`，则所有满足长度 `>=sz` 的字符串位于范围 `[wc, end)` 之间。
 
-而 `partition` 不要求序列己排序，它对所有字符串检查长度是否 `>=sz`，将满足条件的字符串移动到序列前端，不满足条件的字符串都移动到满足条件的字符串之后，返回满足条件的范围的尾后迭代器。因此满足条件的字符串位于范围 `[begin wc)` 之间。
+而 `partition` 不要求序列己排序，它对所有字符串检查长度是否 `>=sz`，将满足条件的字符串移动到序列前端，不满足条件的字符串都移动到满足条件的字符串之后，返回满足条件的范围的尾后迭代器。因此满足条件的字符串位于范围 `[begin, wc)` 之间。
 
 因此，在 `partition` 之前不再需要 `stable_sort`，计数语句和打印语句也都要进行相应修改。
 
@@ -1366,7 +1366,7 @@ void biggies(vector<string> &words, vector<string>::size_type sz)
     // 获取一个迭代器，指向最后一个满足 size() >= sz 的元素之后的位置
     auto wc = partition(words.begin(), words.end(),
                     [sz](const string &a)
-                        { return a.size() > sz; });
+                        { return a.size() >= sz; });
     // 计算满足 size >= sz 的元素的数目
     auto count = wc - words.begin();
     cout << count << " " << make_plural(count, "word", "s")
