--- a/CPP Primer Notes/第10 章 泛型算法.md
+++ b/CPP Primer Notes/第10 章 泛型算法.md
@@ -1223,7 +1223,7 @@ void biggies(vector<string> &words,
     auto count = words.end() - wc;
     cout << count << " " << make_plural(count, "word", "s")
          << " of length " << sz << " or longer" << endl;
-    // 打印长度大于等于给定值的单词，每个的那次后面借一个空格
+    // 打印长度大于等于给定值的单词，每个的单词后面接一个空格
     for_each(wc, words.end(),
         [](const string &s) { cout << s << " "; });
     cout << endl;
